--- a/map.html
+++ b/map.html
@@ -400,7 +400,7 @@
             font-family:'Kanit',sans-serif; box-shadow:0 6px 20px rgba(0,0,0,.3);
             animation:fadeIn .28s ease; position:relative;
           ">
-            <h2 style="margin:0 0 12px; color:#2196f3;">รายการอัปเดตวันนี้ <br> วัน อังคาร ที่ 14 ตุลาคม พ.ศ.2568 <br> **ดูย้อนหลังได้ที่ 📅**</h2>
+            <h2 style="margin:0 0 12px; color:#2196f3;">รายการอัปเดตวันนี้📢<br> วัน อังคาร ที่ 14 ตุลาคม พ.ศ.2568 <br> **ดูย้อนหลังได้ที่ 📅**</h2>
             <ul style="margin:0; padding-left:22px; color:#333; font-size:16px; line-height:1.5;">
               ${todayUpdate.items.map(it => `<li>${it} </li>`).join("")}</ul>
             
