--- a/map.html
+++ b/map.html
@@ -163,6 +163,7 @@
 	 font-size: 14px;
 	 font-weight: 600;
 	 color: #fff;
+	 white-space: nowrap;
 	 z-index: 2000;
     }
 	
@@ -172,6 +173,10 @@
 	}
 
 	updatesHistoryBtn:active { transform: scale(0.95); }
+	
+	min-width: 200;	
+	text-align: center;
+	
 	
   </style>
 </head>
