--- a/map.html
+++ b/map.html
@@ -189,7 +189,7 @@
   </header>
 	<div id="versionTag">v1.1.5</div> 
     <div class="controls">
-    <label for="mapSelect">แผนที่:</label>
+    <label for="mapSelect">เลือกแผนที่:</label>
     <select id="mapSelect">
       <option value="https://www.google.com/maps/d/embed?mid=1rCujO4jFJ2h2wSa_pnlcmrOaQPZNrhM&hl=th&ehbc=2E312F">แผนที่ตำบลดงตะงาว (Map of Dong Ta Ngao Subdistrict) </option>
       <option value="https://www.google.com/maps/d/embed?mid=1zy3WJ1VOzjpWf1gJQ36VGh1TaB9_7L4&hl=th&ehbc=2E312F">แผนที่เสาไฟฟ้าโซล่าเซลล์ (Solar Power Pole Plan) </option>
@@ -405,7 +405,7 @@
             font-family:'Kanit',sans-serif; box-shadow:0 6px 20px rgba(0,0,0,.3);
             animation:fadeIn .28s ease; position:relative;
           ">
-            <h2 style="margin:0 0 12px; color:#2196f3;">รายการอัปเดตวันนี้📢<br> วัน พฤหัสบดี ที่ 16 ตุลาคม พ.ศ.2568 <br> **ดูย้อนหลังได้ที่ 📅**</h2>
+            <h2 style="margin:0 0 12px; color:#2196f3;">รายการอัปเดตวันนี้📣<br> วัน พุธ ที่ 22 ตุลาคม พ.ศ.2568 <br> **ดูย้อนหลังได้ที่ 📅**</h2>
             <ul style="margin:0; padding-left:22px; color:#333; font-size:16px; line-height:1.5;">
               ${todayUpdate.items.map(it => `<li>${it} </li>`).join("")}</ul>
             
