--- a/map.html
+++ b/map.html
@@ -14,14 +14,14 @@
     html, body { height:100%; margin:0; font-family:'Kanit', sans-serif; overflow:hidden; }
 	
     body{
-      background: url('Backgroundวันสวรรคต.png') no-repeat center center fixed;
+      background: url('Backgroundพฤศจิกายน.png') no-repeat center center fixed;
       background-size: cover;
       display:flex; flex-direction:column;
     }
 
     header{ 
       display:flex; align-items:center; justify-content:center; gap:12px;
-      background: #000000; color:#fff; padding:8px;
+      background: #7B68EE; color:#fff; padding:8px;
       font-size:20px; font-weight:600; text-align:center;
       backdrop-filter: blur(3px); border-radius:8px; margin:8px;
     }
@@ -65,7 +65,7 @@
     .fab:hover{ transform: scale(1.1); box-shadow:0 10px 20px rgba(0,0,0,.35); }
 
     /* ปุ่มติดตั้ง */
-    #installBtn{ bottom:88px; background: linear-gradient(135deg,#000000); }
+    #installBtn{ bottom:88px; background: linear-gradient(135deg,#7B68EE); }
     #installBtn svg{ width:28px; height:28px; pointer-events:none; }
     #installBtn::after{
       content:""; position:absolute; inset:0; border-radius:50%;
@@ -81,7 +81,7 @@
     }
 
     /* ปุ่มรีเฟรช */
-    #refreshBtn{ bottom:20px; background: linear-gradient(135deg,#000000); }
+    #refreshBtn{ bottom:20px; background: linear-gradient(135deg,#7B68EE); }
     #refreshBtn svg{ width:26px; height:26px; pointer-events:none; }
     #refreshBtn::after{
       content:""; position:absolute; inset:0; border-radius:50%;
@@ -96,7 +96,7 @@
     #updateBtn{
       display:none;
       position:fixed; bottom:160px; right:16px;
-      background:#ff9800; color:#fff;
+      background:#7B68EE; color:#fff;
       border:none; border-radius:8px;
       padding:10px 14px; font-size:16px;
       box-shadow:0 4px 10px rgba(0,0,0,0.25);
@@ -107,7 +107,7 @@
     #splash{
       position: fixed; inset: 0;
       display: grid; place-items: center;
-      background: #000000; /*<สีหน้ารอโหลด>*/
+      background: #9370DB; /*<สีหน้ารอโหลด>*/
       backdrop-filter: blur(3px);
       z-index: 10050;
       opacity: 1; 
@@ -197,7 +197,7 @@
     </select>
 	
 	<a href="คู่มือการใช้งาน Map ABT.pdf" target="_blank"
-   style="margin-left:10px; padding:6px 12px; Background:#000000; color:#fff;
+   style="margin-left:10px; padding:6px 12px; Background:#7B68EE; color:#fff;
    text-decoration:none; border-radius:10px; font-weight:50;">
 	📖คู่มือ
 	</a>
@@ -228,7 +228,7 @@
 	id="updatesHistoryBtn"
 	style="position:fixed; right:16px; bottom:152px;
       width:56px; height:56px; border:none; border-radius:50%;
-      background:#000000; color:#fff; display:grid; place-items:center;
+      background:#7B68EE; color:#fff; display:grid; place-items:center;
       box-shadow:0 8px 18px rgba(0,0,0,.28); z-index:10001; cursor:pointer;
       text-decoration:none;">
   
