--- a/offline.html
+++ b/offline.html
@@ -6,16 +6,16 @@
   <title>ออฟไลน์</title>
   <style>
     body { margin:0; min-height:100vh; display:grid; place-items:center;
-           font-family: system-ui, sans-serif; text-align:center; }
-    a { display:inline-block; margin-top:12px; padding:8px 14px; background:#2196f3;
-        color:#fff; border-radius:8px; text-decoration:none; }
+           font-family:'Kanit',sans-serif; text-align:center; background:#e3f2fd; }
+    a { display:inline-block; margin-top:12px; padding:8px 14px;
+        background:#2196f3; color:#fff; border-radius:8px; text-decoration:none; }
   </style>
 </head>
 <body>
   <main>
     <h1>คุณออฟไลน์อยู่</h1>
-    <p>ไม่สามารถโหลดแผนที่ได้ กรุณาเชื่อมต่ออินเทอร์เน็ตแล้วลองใหม่</p>
-    <a href="./map.html">ลองโหลดใหม่</a>
+    <p>ไม่สามารถโหลดแผนที่ได้ กรุณาเชื่อมต่ออินเทอร์เน็ตแล้วลองใหม่อีกครั้ง</p>
+    <a href="./map.html">🔄 ลองโหลดใหม่</a>
   </main>
 </body>
 </html>
